# aurela-sessions

./: .bash_aliases  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/booking/: exceptions.py  services.py  urls.py
app/booking/management/commands/: seed.py
app/booking/migrations/: 0001_initial.py
app/booking/models/: __init__.py  patient.py  session.py  therapist.py
app/booking/serializers/: __init__.py  book_session.py  cancel_session.py  session.py
app/booking/tests/: test_book_session.py  test_cancel_session.py  test_concurrency.py  test_upcoming_sessions.py
app/booking/views/: __init__.py  book_session.py  cancel_session.py  upcoming_sessions.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
