[project]
name = "aurela-sessions"
version = "0.1.0"
description = "Session management API for a mental health platform. Django REST Framework + PostgreSQL."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "model-bakery>=1.24.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
]
